[package]
name = "nacos-rs"
version = "0.0.1-alpha"
authors = ["shonenada <shonenada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "nacos-config",
  "nacos-core",
  "nacos-namespace",
  "nacos-service",
]
