[package]
name = "nacos-config"
version = "0.1.0"
authors = ["shonenada <shonenada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.39", features = ["derive"] }
serde_derive = "1.0.39"
serde_json = "1.0.39"
