[package]
name = "nacos-core"
version = "0.0.1"
authors = ["shonenada <shonenada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nacos-config = { path = "../nacos-config" }
nacos-namespace = { path = "../nacos-namespace" }
nacos-service = { path = "../nacos-service" }
nacos-utils = { path = "../nacos-utils" }
tokio = { version = "1", features = ["full"] }
